--- a/numeros romanos 3/Mecanica F.T2.csproj
+++ b/numeros romanos 3/Mecanica F.T2.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -23,7 +23,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\numeros romanos 2\numeros romanos 2.csproj" />
+    <ProjectReference Include="..\numeros romanos 2\Mecanica F.T.csproj" />
   </ItemGroup>
 
 </Project>
